style.css
/*----------------------------------------------------------------
    CSS CLEAR START
*/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0-modified | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* make sure to set some focus styles for accessibility */
:focus {
    outline: 0;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}



/**
 * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
 * Known issue: no IE 6 support.
 */

[hidden] {
    display: none;
}

/**
 * 1. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
 *    `em` units.
 * 2. Prevent iOS text size adjust after orientation change, without disabling
 *    user zoom.
 */

html {
    font-size: 100%; /* 1 */
    -webkit-text-size-adjust: 100%; /* 2 */
    -ms-text-size-adjust: 100%; /* 2 */
}

/**
 * Address `outline` inconsistency between Chrome and other browsers.
 */

a:focus {
    outline: thin dotted;
}

/**
 * Improve readability when focused and also mouse hovered in all browsers.
 */

a:active,
a:hover {
    outline: 0;
}

/**
 * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
 * 2. Improve image quality when scaled in IE 7.
 */

img {
    border: 0; /* 1 */
    -ms-interpolation-mode: bicubic; /* 2 */
}

/**
 * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
 */

figure {
    margin: 0;
}

/**
 * Correct margin displayed oddly in IE 6/7.
 */

form {
    margin: 0;
}

/**
 * Define consistent border, margin, and padding.
 */

fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em;
}

/**
 * 1. Correct color not being inherited in IE 6/7/8/9.
 * 2. Correct text not wrapping in Firefox 3.
 * 3. Correct alignment displayed oddly in IE 6/7.
 */

legend {
    border: 0; /* 1 */
    padding: 0;
    white-space: normal; /* 2 */
    *margin-left: -7px; /* 3 */
}

/**
 * 1. Correct font size not being inherited in all browsers.
 * 2. Address margins set differently in IE 6/7, Firefox 3+, Safari 5,
 *    and Chrome.
 * 3. Improve appearance and consistency in all browsers.
 */

button,
input,
select,
textarea {
    font-size: 100%; /* 1 */
    margin: 0; /* 2 */
    vertical-align: baseline; /* 3 */
    *vertical-align: middle; /* 3 */
}

/**
 * Address Firefox 3+ setting `line-height` on `input` using `!important` in
 * the UA stylesheet.
 */

button,
input {
    line-height: normal;
}

/**
 * Address inconsistent `text-transform` inheritance for `button` and `select`.
 * All other form control elements do not inherit `text-transform` values.
 * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
 * Correct `select` style inheritance in Firefox 4+ and Opera.
 */

button,
select {
    text-transform: none;
}

/**
 * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
 *    and `video` controls.
 * 2. Correct inability to style clickable `input` types in iOS.
 * 3. Improve usability and consistency of cursor style between image-type
 *    `input` and others.
 * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
 *    Known issue: inner spacing remains in IE 6.
 */

button,
html input[type="button"], /* 1 */
input[type="reset"],
input[type="submit"] {
    -webkit-appearance: button; /* 2 */
    cursor: pointer; /* 3 */
    *overflow: visible;  /* 4 */
}

/**
 * Re-set default cursor for disabled elements.
 */

button[disabled],
html input[disabled] {
    cursor: default;
}

/**
 * 1. Address box sizing set to content-box in IE 8/9.
 * 2. Remove excess padding in IE 8/9.
 * 3. Remove excess padding in IE 7.
 *    Known issue: excess padding remains in IE 6.
 */

button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

/**
 * 1. Remove default vertical scrollbar in IE 6/7/8/9.
 * 2. Improve readability and alignment in all browsers.
 */

textarea {
    overflow: auto; /* 1 */
    vertical-align: top; /* 2 */
}

/**
 * Remove most spacing between table cells.
 */

html,
button,
input,
select,
textarea {
    color: #222;
}


::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

img {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/*----------------------------------------------------------------
    CSS CLEAR FINISH
*/

/*----------------------------------------------------------------
    DOCUMENT CSS START
*/
/* spartan-500 - latin */
@font-face {
    font-family: 'Spartan';
    font-style: normal;
    font-weight: 500;
    src: url('./fonts/spartan-v3-latin-500.eot'); /* IE9 Compat Modes */
    src: local(''),
         url('./fonts/spartan-v3-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
         url('./fonts/spartan-v3-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
         url('./fonts/spartan-v3-latin-500.woff') format('woff'), /* Modern Browsers */
         url('./fonts/spartan-v3-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
         url('./fonts/spartan-v3-latin-500.svg#Spartan') format('svg'); /* Legacy iOS */
  }
  /* spartan-700 - latin */
  @font-face {
    font-family: 'Spartan';
    font-style: normal;
    font-weight: 700;
    src: url('./fonts/spartan-v3-latin-700.eot'); /* IE9 Compat Modes */
    src: local(''),
         url('./fonts/spartan-v3-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
         url('./fonts/spartan-v3-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
         url('./fonts/spartan-v3-latin-700.woff') format('woff'), /* Modern Browsers */
         url('./fonts/spartan-v3-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
         url('./fonts/spartan-v3-latin-700.svg#Spartan') format('svg'); /* Legacy iOS */
  }
  /* spartan-800 - latin */
  @font-face {
    font-family: 'Spartan';
    font-style: normal;
    font-weight: 800;
    src: url('./fonts/spartan-v3-latin-800.eot'); /* IE9 Compat Modes */
    src: local(''),
         url('./fonts/spartan-v3-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
         url('./fonts/spartan-v3-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
         url('./fonts/spartan-v3-latin-800.woff') format('woff'), /* Modern Browsers */
         url('./fonts/spartan-v3-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
         url('./fonts/spartan-v3-latin-800.svg#Spartan') format('svg'); /* Legacy iOS */
  }

  
/* Box sizing rules */
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
    font-family: 'Spartan';
    font-style: normal;
    font-size: 30px;
    font-weight: 500;
    line-height: 1.2;
    color: rgb(81, 201, 220);
    background: url(./images/back.png) no-repeat right;
    width: 100%;
    min-height: 100vh;
    background-size: cover;
    position: relative;
}

/* timer of moz for links on hover/active/focus */

.moz_timer {
    -moz-transition: all 0.2s ease-out;
    -o-transition: all 0.2s ease-out;
    -webkit-transition: all 0.2s ease-out;
}

/*----------------------------------------------------------------
    DOCUMENT CSS FINISH
*/

.calculator_block {
    margin: 0 auto;
    margin-top: 2%;
    background: rgb(26, 26, 40);
    height: fit-content;
    width: 400px;
    padding: 20px;
    border-radius: 3px;
    box-shadow: 0 0 20px rgba(26, 26, 40, 0.309);
}

.calculator_text {
    padding-top: 30px;
    border-bottom: 2px solid rgba(255, 255, 255, 0.09);
    margin-bottom: 20px;
}

.calculator_text-eva {
    display: inline-block;
    font-size: 32px;
    color: rgb(81, 201, 220);
    font-weight: bold;
}

.calculator_result{
    display: inline-block;
    height: 70px;
    width: 90%;
    text-align: right;
    background: inherit;
    border: none;
    font-family: 'Spartan';
    font-style: normal;
    font-weight: 500;
    line-height: 1.2;
    color: rgb(81, 201, 220);
    font-size: 30px;
}

.calculator_buttons {
    height: 500px;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    row-gap:13px;
    column-gap: 18px;
    
}

.calculator_button {
    display: block;
    border: none;
    font-family: 'Spartan';
    font-style: bold;
    font-weight: 700;
    background: rgb(30, 36, 52);
    color: rgb(81, 201, 220);
    font-size: 30px;
    line-height: 1.2;
    border-radius: 7px;
    -moz-transition: all 0.2s ease-out;
    -o-transition: all 0.2s ease-out;
    -webkit-transition: all 0.2s ease-out;
}

.calculator_button:hover {
    background: rgb(81, 201, 220);
    color: rgb(30, 36, 52);
}

.calculator_button:active {
    -moz-transform: scale(0.9);
    -webkit-transform: scale(0.9);
    -o-transform: scale(0.9);
}

.theme {
    background: rgb(81, 201, 220);
    color: rgb(30, 36, 52);
}

.theme:hover {
    background: rgb(30, 36, 52);
    color: rgb(81, 201, 220);
}

.sign {
    display: block;
    position: absolute;
    left: 4%;
    top: 4%;
    font-size: 10px;
    text-decoration: none;
    color: rgb(26, 26, 40);
    background: rgb(172, 210, 220);
    padding: 20px;
}

.plus {
    grid-row: span 2;
}

.calculator_link {
    background: url(./images/gh-ico-cyan.png) no-repeat center center;
    background-size: 85%, auto, cover;
}

.calculator_link:hover {
    background: url(./images/gh-ico-dark.png) no-repeat center center;
    background-size: 85%, auto, cover;
}

.calc_link-img {
    width: 80%;
    height: auto;
}


/* ------ MOBILE ------*/

@media (max-width: 768px) {

body {
    background: rgb(26, 26, 40);
}

.calculator_block {
    height: auto;
    margin-top: 0px;
    box-shadow: none;
}

.sign {
    visibility: hidden;
}

}

